--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!--
-Brighid Wilhite 2015
+Very simply adapted from the following by Brighid Wilhite 2015
+
+It's a Rainbow! - Color Changing Text and Backgrounds
+index.html
+By Sam Dunn
+2009 Build Internet! www.buildinternet.com
 -->
+
 <!DOCTYPE html>
 <html xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Margot - Hello world</title>
-  <style type="text/css">
+	<script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js"></script>
+	<script type="text/javascript" src="jquery.color.js"></script>
+
+	<script type="text/javascript">
+	$(document).ready(function() {
+
+		spectrum();
+
+		function spectrum(){
+			var hue = 'rgb(' + (Math.floor(Math.random() * 256)) + ',' + (Math.floor(Math.random() * 256)) + ',' + (Math.floor(Math.random() * 256)) + ')';
+			$('#welcome').animate( { backgroundColor: hue }, 1000);
+			$('.colorful').animate( { color: hue }, 1000);
+			spectrum();
+		}
+
+	});
+	</script>
+	<style type="text/css">
 	*{ margin:0; padding:0; }
+  body { background-color: black; }
 	.colorful {
 		text-align: justify;
 		text-justify: inter-word;
