Added local jquery

--- a/home.html
+++ b/home.html
@@ -13,6 +13,9 @@ By Sam Dunn
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Margot - Hello world</title>
   <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+  <script>
+  if (!window.jQuery) { document.write('<script src="/js/jquery-1.9.0.js"><\/script>'); }
+  </script>
   <script type="text/javascript" src="js/jquery.color.js"></script>
 
   <script type="text/javascript">
