--- a/home.html
+++ b/home.html
@@ -12,19 +12,21 @@ By Sam Dunn
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Margot - Hello world</title>
-  <script src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+  <script src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js"></script>
   <script>
-  if (!window.jQuery) { document.write('<script src="/js/jquery-1.9.0.js"><\/script>'); }
+  if (!window.jQuery) { document.write('<script src="/js/jquery-1.3.2.js"><\/script>'); }
   </script>
   <script type="text/javascript" src="js/jquery.color.js"></script>
 
   <script type="text/javascript">
   $(document).ready(function() {
 
+    spectrum();
 
     function spectrum(){
       var hue = 'rgb(' + (Math.floor(Math.random() * 256)) + ',' + (Math.floor(Math.random() * 256)) + ',' + (Math.floor(Math.random() * 256)) + ')';
-      $('.colorful').animate( { color: hue }, 1000, spectrum);
+      $('#welcome').animate( { backgroundColor: hue }, 1000);
+      $('.colorful').animate( { color: hue }, 1000);
       spectrum();
     }
 
